Fix: quickConnect flexbox alignment (#30)

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -1466,6 +1466,13 @@ ul.MuiList-root.MuiMenu-list.MuiList-dense>div:first-child {
     position: relative;
 }
 
+#quickConnectPreferencesPage .padded-left.padded-right.padded-bottom-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 #txtLoginDisclaimer{
     resize: none;
 }
